Adds HomeSection and AboutSection. Update Navbar to support mobile

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,3 +1,6 @@
 {
-    "test": "test"
+    "navbar.about": "About",
+    "navbar.discover": "Discover",
+    "navbar.services": "Services",
+    "navbar.contact": "Contact"
 }
